# workforce-specs

./: .coderignore  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yaml  load_secrets.py  mypy.ini  pyproject.toml  run_evals.py  spec_creation_prompt.md  startup.sh
.github/: dependabot.yaml
.github/config/: example-environments.json
.github/workflows/: ci_cd.yaml  pr_checks.yaml  weekly_security.yaml
ai-account-exec/: workforce_spec.md
blackhawk-pilot/: workforce_spec.md
docs/: dev-env-setup.md
hello_world/: hello_world_basic.py  hello_world_generic_webserver.py  hello_world_slack.py  hello_world_terminal.py  hello_world_websocket.py  hello_world_websocket_with_snapshots.py
hello_world/agents/: hello_world_agent.py
hello_world/agents/config/: hello_world_agent.yaml
roofstock-move-out/: workforce_spec.md
